# prepbench

./: .env.example  .gitignore  CITATION.cff  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: llm.yaml
data/case_013/: amb_kb.json
data/case_018/: amb_kb.json  query_full.md
data/case_023/: amb_kb.json
data/case_025/: amb_kb.json
data/case_028/: amb_kb.json
data/case_031/: amb_kb.json  query.md
data/case_036/: amb_kb.json  query_full.md
data/case_037/: amb_kb.json
data/case_039/: amb_kb.json
data/case_040/: amb_kb.json
data/case_041/: amb_kb.json
data/case_049/: amb_kb.json
data/case_050/: amb_kb.json
data/case_065/: query.md
data/case_072/: amb_kb.json
data/case_073/: amb_kb.json
data/case_074/: query.md
data/case_083/: amb_kb.json
data/case_088/: amb_kb.json
data/case_093/: amb_kb.json
data/case_096/: amb_kb.json  query_full.md
data/case_099/: amb_kb.json
data/case_101/: amb_kb.json
data/case_102/: amb_kb.json
data/case_103/: amb_kb.json
data/case_104/: query.md
data/case_115/: amb_kb.json
data/case_118/: amb_kb.json
data/case_127/: amb_kb.json
data/case_132/: amb_kb.json
data/case_133/: amb_kb.json
data/case_134/: amb_kb.json
data/case_138/: amb_kb.json
data/case_140/: amb_kb.json
data/case_141/: amb_kb.json
data/case_143/: amb_kb.json
data/case_145/: amb_kb.json
docs/: BYOA_E2E.md  DATASET.md  EVALUATION.md  REPRO.md  RESULTS.md  USER_SIMULATOR.md
examples/: user_simulator_demo.py
scripts/: validate_dataset.py
(+99 files in other folders)
